--- a/Helm_charts/MongoDB/values.yaml
+++ b/Helm_charts/MongoDB/values.yaml
@@ -1,6 +1,6 @@
 secret:
-  root_username: nasi
-  root_password: nasi1234
-  username: nasi
-  password: nasi1234
-  users_list: nasi
+  root_username: wabsense
+  root_password: wabsense1234
+  username: wabsense
+  password: wabsense1234
+  users_list: wabsense
