--- a/src/auth-service/manifest/deployment.yaml
+++ b/src/auth-service/manifest/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: auth
-          image: nasi101/auth
+          image: wabsense/auth
           ports:
             - containerPort: 5000
           envFrom:
