--- a/src/auth-service/manifest/secret.yaml
+++ b/src/auth-service/manifest/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: auth-secret
 stringData:
-  PSQL_PASSWORD: nasi1234
+  PSQL_PASSWORD: wabsense1234
   JWT_SECRET: sarcasm
 type: Opaque
 
