--- a/src/gateway-service/manifest/gateway-deploy.yaml
+++ b/src/gateway-service/manifest/gateway-deploy.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: nasi101/gateway
+          image: wabsense/gateway
           envFrom:
             - configMapRef:
                 name: gateway-configmap
