--- a/src/notification-service/manifest/secret.yaml
+++ b/src/notification-service/manifest/secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: notification-secret
 stringData:
-  GMAIL_ADDRESS: "iambatmanthegoat@gmail.com" #enter your email to get the id
-  GMAIL_PASSWORD: "gkxk acif rhgv erjr"
+  GMAIL_ADDRESS: "elmusty.net@gmail.com" #enter your email to get the id
+  GMAIL_PASSWORD: "ovehqpxxzjwncxbo"
 type: Opaque
 
 # Passw0rd@1234
